--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -311,15 +311,16 @@ document.forms['new_micropost'].elements['micropost[latlng]'].value = '(50.29792
         <%= form_tag({ :action => "search"}, :method => "get") do %>
       <!-- <%= label_tag(:hobby, t('search_for')) %>
        <%= select_tag(:hobby, options_for_select(sportlist.sort.unshift([t('home.micropost.select_one_optional'), ""]))) %> -->
-      <%= select_tag(:place, options_for_select(citylist2.sort.unshift([t('home.micropost.select_city'), ""],["-------------------------------------------", ""]))) %>
+      <%= select_tag(:place, options_for_select(citylist2.sort.unshift([t('home.micropost.select_city'), ""],["-------------------------------------------", ""])), style: "border-bottom: 0px; margin-bottom: 0px; width: 75%; height: 30px;") %>
       
-      <%= submit_tag t('home.micropost.searchwithoutreg'), :name => nil, class: "btn btn-inverse"%>
+      <%= submit_tag t('home.micropost.searchwithoutreg'), :name => nil, class: "btn"%>
       <% end %>
   </div>
+  <%= image_tag "connectifybanner.jpg", width: "100%" %>
   <div class='buttonbox'>
   <span><%= image_tag "facebook2.png", title: "Connect with Facebook", width: "31px" %>
-<%= link_to t('home.connectme'), "/auth/facebook", id: "sign_in", class: "btn btn-large btn-primary btn-success" %></span> <%= t('home.or') %>
-<%= link_to t('home.tourstart'), "#", id: "tourstart", class: "btn btn-large btn-primary btn-warning" %>
+<%= link_to t('home.connectme'), "/auth/facebook", id: "sign_in", class: "btn btn-primary btn-success" %></span> <%= t('home.or') %>
+<%= link_to t('home.tourstart'), "#", id: "tourstart", class: "btn btn-primary btn-warning" %>
 </div>
 <div id="tourdiv"><div id='tourwrapper'>
   <%= link_to "x", "#", id: "tourclose" %>
@@ -329,7 +330,18 @@ document.forms['new_micropost'].elements['micropost[latlng]'].value = '(50.29792
 </div>
 </div>
 <div class="span7">
-<%= image_tag "connectifybanner2.jpg", width: "100%" %>
+
+<div id="myCarousel" class="carousel slide">
+  <!-- Carousel items -->
+  <div class="carousel-inner">
+    <div class="active item"><%= image_tag "Beachvolleyball2@2x.jpg", width: "100%" %></div>
+    <div class="item"><%= image_tag "Beachvolleyball1@2x.jpg", width: "100%" %></div>
+    <div class="item"><%= image_tag "Jogging@2x.jpg", width: "100%" %></div>
+  </div>
+  <!-- Carousel nav -->
+  <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+  <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
+</div>
 </div>
 <div>
   <a href="#" id="show_whatfbknows" style="clear: both; padding-left: 0px; position: relative; top: 20px; z-index: 1;"><%= t('doesfbknow') %></a>
