changed css feed_item and micropost_form

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -244,6 +244,8 @@ aside {
 .gravatar {
 	float: left;
 	margin-right: 10px;
+	border: white 3px solid;
+	border-bottom-width: 10px;
 }
 
 /* forms */
