--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -10,7 +10,7 @@
 		<%= f.select :hobby, options_for_select(sportlist.sort.unshift([t('home.micropost.select_one'), ""])), :class => '' %></div>
 	</div> -->
    <!--  <%= f.select :hobby, options_for_select('a','a') %> -->
-	<div class="field">
+	<div class="">
 		<div class="ui-widget">
 	   <%= f.label t('home.micropost.what') %>
 	    <select id="combobox" name="micropost[hobby]" class="micropost_hobby">
@@ -22,7 +22,7 @@
 		</div>
 		<div style="clear: both"></div>
 	</div>
-	<div class="field">
+	<div class="">
 		<%= f.label t('home.micropost.where') %>
 		<%= f.select :place, options_for_select(citylist.sort.unshift([t('home.micropost.select_one'), ""],["-------------------------------------------", ""])) %>
 
@@ -35,15 +35,15 @@
 		<div id="map_canvas" style="width:100%; height:350px"></div>
 	</div>
 	<br />
-	<div class="field">
+	<div class="">
 		<%= f.label t('home.micropost.when') %>
-		<%= f.text_field :datetime, :class => 'datepicker', placeholder: t('home.micropost.datetime') %>
+		<%= f.text_field :datetime, :class => 'datepicker', placeholder: t('home.micropost.datetime'), style: "height: 38px;" %>
 <!-- 		<%= f.datetime_select :datetime,  
                         {:default => 24.hours.from_now, 
                        :minute_step => 15, :order => [:day, :month, :year, :hour, :minute]}, :class => 'datetime' %> <clock><%= t('datetime_clock') %></clock>
  -->	</div>
 	<div style="clear: both"></div>
-	<div class="field">
+	<div class="">
 		<%= f.label t('home.micropost.about') %>
 <!-- 		<%= f.select :level, options_for_select([[t('home.micropost.select_level'), ""], "Newbie", "Advanced", "Pro"]), :class => '' %>
  -->		<%= f.text_area :content, placeholder: t('home.micropost.textbox_text') %>
