--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -375,6 +375,8 @@ div[class=ui-select]:nth-child(5), div[class=ui-select]:nth-child(6){
 
 .content {
 	display: block;
+	line-height: 20px;
+	padding-right: 50px;
 }
 
 .timestamp {
