--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -48,7 +48,7 @@
 <!-- 		<%= f.select :level, options_for_select([[t('home.micropost.select_level'), ""], "Newbie", "Advanced", "Pro"]), :class => '' %>
  -->		<%= f.text_area :content, placeholder: t('home.micropost.textbox_text') %>
 	</div>
-	<%= f.submit t('home.micropost.submit'), class: "btn btn-large btn-success" %>
+	<%= f.submit t('home.micropost.submit'), class: "btn btn-large btn-primary" %>
 <% end %>
 
     <script>
