--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -9,8 +9,7 @@
 		<% else %>
 			<div style="color: red;"><%= t('home.micropost.time_till_delete_from_searchindex') + " (in " + time_ago_in_words(feed_item.datetime) + ")"  if ((feed_item.datetime - Time.now) < (60*60*24*7*3)) %></div>
 		<% end %>
-	<span class="content" style="line-height: 20px;
-padding-right: 50px;"><%= truncate(feed_item.content, length: 250) %></span>
+	<span class="content"><%= truncate(feed_item.content, length: 250) %></span>
 	</li><span class="timestamp">
 		<%= t('feed_item.posted') %> <%= time_ago_in_words(feed_item.created_at) %> <%= t('feed_item.ago') %>.
 	
