changed privacy and agb link

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -422,7 +422,8 @@ div[class=ui-select]:nth-child(5), div[class=ui-select]:nth-child(6){
 
 #terms {
 	h3, p, li {
-	font-size: 1.0em;
+	font-size: 0.8em;
+	line-height: 1.0em;
 	text-align: justify;
 	margin-left: 20%;
 	margin-right: 20%;
