--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -35,6 +35,14 @@
 				<li>Dann folge ihm/ihr doch einfach.</li>
 				<li>Damit erscheinen alle neuen Microposts der betreffenden Person direkt auf deiner Pinnwand.</li>
 
+		</div>
+		<div class="span8 offset1">
+			<p class="lead"><i class="icon-star"></i> <small><i>Markiere dir wichtige Microposts</i></small></p>
+			<ol class="offset1">
+				<li>Auf der Suche nach neuen Microposts kannst du dir beliebig viele Microposts merken.</li>
+				<li>Dazu markierst du einfach ein Micropost deiner Wahl mit einem Stern.</li>
+				<li>Danach erscheint das markierte Micropost auf deiner Pinwand.</li>
+
 		</div>	
 	</div>
 </div>
