--- a/app/views/static_pages/privacy.html.erb
+++ b/app/views/static_pages/privacy.html.erb
@@ -1,65 +1,51 @@
-<div id="terms">
+<div id="terms" class="lead">
 <h3>Datenschutzerklärung</h3>
 
 <h3>1. Allgemeines</h3>
 
-<p>Connectify.de , Waldstrasse 93, 76133 Karlsruhe vertreten durch den Geschäftsführer Daniel Fliegauf (nachfolgend „Connectify“ genannt), betreibt ein interaktives Online-Portal (die „Plattform“), das die Vermittlung von Treffpunkten zum Gegenstand hat.</p>
+<p>Connectify.de , Waldstrasse 93, 76133 Karlsruhe vertreten durch Daniel Fliegauf (nachfolgend „Connectify“ genannt), betreibt ein interaktives Online-Portal, das dir dabei helfen soll den richtigen Sport-/Hobbypartner zu finden.</p>
 
-<p>Connectify ermöglicht den Zugang und die Nutzung des Portals auf der Grundlage der allgemeinen Geschäftsbedingungen („AGB“). Die AGB regeln das Verhältnis zwischen Connectify als Betreiber des Portals und sich registrierenden Nutzern.</p>
+<p>Connectify ermöglicht den Zugang und die Nutzung des Portals auf der Grundlage der Verhaltensregeln. Diese regeln das Verhältnis zwischen Connectify als Betreiber des Portals und sich registrierenden Nutzern.</p>
 
-<p>Im Rahmen der Registrierung als Nutzer und im weiteren bei Nutzung der Plattform geben Sie Connectify Daten bekannt, die einen Personenbezug zu Ihnen aufweisen (so genannte personenbezogene Daten im Sinne des Bundesdatenschutzgesetzes). Diese Datenschutzerklärung beschreibt, wie Connectify mit diesen personenbezogenen Daten umgeht.</p>
+<p>Im Rahmen der Registrierung als Nutzer und im weiteren bei Nutzung der Plattform gibst du Connectify Daten bekannt, die einen Personenbezug zu dir aufweisen (so genannte personenbezogene Daten im Sinne des Bundesdatenschutzgesetzes). Diese Datenschutzerklärung beschreibt, wie Connectify mit diesen personenbezogenen Daten umgeht.</p>
 
-<h3>2. Registrierung auf unserer Webseite</h3>
+<h3>2. Anmeldung</h3>
 
-<p>Um sämtliche Funktionen der Plattform nutzen zu können, müssen Sie sich zunächst mit Ihrem Facebook-Account anmelden. Connectify speichert hierbei nur den Namen und die eMail Adresse der User. Dabei kann nur auf die Informationen zugegriffen werden, denen ausdrücklich zugestimmt wird. Bitte achten Sie sorgfältig auf die Geheimhaltung Ihres Passworts, um einem Missbrauch vorzubeugen.</p>
+<p>Um sämtliche Funktionen von Connectify nutzen zu können, musst du dich zunächst mit deinem Facebook-Account anmelden. Connectify speichert hierbei nur den Namen und die eMail Adresse der User. Es kann nur auf Informationen zugegriffen werden, denen du ausdrücklich zustimmst.</p>
 
-<p>Mit Hilfe eines differenzierten Systems von Zugriffsberechtigungen und technischen Schutzmaßnahmen wie SSL-Verschlüsselung wird eine größtmögliche Datensicherheit angestrebt.</p>
+<p>Mit Hilfe von technischen Schutzmaßnahmen (SecureSocketLayer) versuchen wir dir eine größtmögliche Datensicherheit zu bieten. Du kannst dies am grünen Sicherheitsschloss (Google Chrome) in der Adressleiste deines Browsers erkennen.</p>
 
-<p>Auf Verlangen gibt Ihnen Connectify gerne Auskunft über die Daten, die unter Ihrem Benutzernamen gespeichert sind.</p>
+<p>Auf Verlangen gibt dir Connectify gerne Auskunft über die Daten, die unter deinem Benutzernamen gespeichert sind.</p>
 
 <h3>3. Art, Umfang und Zweck der Datenverarbeitung</h3>
 
-<p>Die von Ihnen im Rahmen Ihrer Registrierung angegebenen personenbezogenen Daten werden für die vertraglich vereinbarten Zwecke, d. h. zur Kennzeichnung Ihrer Treffpunkten, Ermöglichung der Nutzung der Webseite genutzt. Darüber hinaus werden die Daten zu Werbezwecken NICHT genutzt.</p>
+<p class="text-error">Die von dir im Rahmen der Anmeldung angegebenen personenbezogenen Daten werden <b>NUR</b> zur Kennzeichnung deiner Microposts genutzt. Zu Werbezwecken werden die Daten <b>NICHT</b> verwendet.</p>
 
 <h3>4. Dritte</h3>
 
-<p>Ihre personenbezogenen Daten nicht an Dritte weitergegeben.</p>
+<p>Deine personenbezogenen Daten auch <b>nicht</b> an Dritte weitergegeben.</p>
 
-<h3>5. Einwilligung/Widerrufsrecht</h3>
-
-<p>Soweit Sie auf unserer Internetseite in die Verwendung Ihrer personenbezogenen Daten einwilligen, erfolgt dies auf freiwilliger Basis. Sie haben daher das Recht, diese Einwilligung jederzeit mit Wirkung für die Zukunft zu widerrufen.</p>
-
-<h3>6. Cookies, Nutzung von Google Analytics</h3>
+<h3>6. Cookies, Auschluss der Nutzung von Google Analytics</h3>
 
 <p>Connectify verwendet Sitzungscookies. Diese sind für die vollständige Funktionsfähigkeit der Seiten notwendig. Cookies sind kleine Textdateien, die auf der Festplatte von Besuchern unserer Webseite abgelegt werden.</p>
 
-<p>Die in Cookies enthaltenen Informationen erleichtern Ihnen die Navigation und ermöglichen die korrekte Anzeige unserer Internetseiten. Ferner werden die angezeigten Informationen auf Ihr Profil abgestimmt. Cookies selbst enthalten keine personenbezogenen Informationen.</p>
+<p>Du kannst das Speichern von Cookies verhindern, indem du deine Browser-Einstellungen entsprechend änderst. Wie das funktioniert, entnimmst du am besten der Bedienungsanleitung deines Browser-Herstellers.</p>
 
-<p>Sie können das Speichern von Cookies verhindern, indem Sie Ihre Browser-Einstellungen entsprechend ändern. Wie das funktioniert, entnehmen Sie bitte der Bedienungsanleitung Ihres Browser-Herstellers.</p>
-
-<p>Connectify.de benutzt zudem Google Analytics, einen Webanalysedienst der Google Inc. („Google“). Google Analytics verwendet sog. „Cookies“, Textdateien, die auf Ihrem Computer gespeichert werden und die eine Analyse der Benutzung der Website durch Sie ermöglichen. Die durch den Cookie erzeugten Informationen über Ihre Benutzung dieser Website werden in der Regel an einen Server von Google in den USA übertragen und dort gespeichert. Aufgrund der IP-Anonymisierung auf Connectify wird Ihre IP-Adresse von Google jedoch innerhalb von Mitgliedstaaten der Europäischen Union oder in anderen Vertragsstaaten des Abkommens über den Europäischen Wirtschaftsraum zuvor gekürzt. Nur in Ausnahmefällen wird die volle IP-Adresse an einen Server von Google in den USA übertragen und dort gekürzt. Im Auftrag von Connectify wird Google diese Informationen benutzen, um Ihre Nutzung der Website auszuwerten, um Reports über die Websiteaktivitäten zusammenzustellen und um weitere mit der Websitenutzung und der Internetnutzung verbundene Dienstleistungen gegenüber dem Websitebetreiber zu erbringen. Die im Rahmen von Google Analytics von Ihrem Browser übermittelte IP-Adresse wird nicht mit anderen Daten von Google zusammengeführt. Sie können die Speicherung der Cookies durch eine entsprechende Einstellung Ihrer Browser-Software verhindern; wir weisen Sie jedoch darauf hin, dass Sie in diesem Fall gegebenenfalls nicht sämtliche Funktionen dieser Website vollumfänglich werden nutzen können. Sie können darüber hinaus die Erfassung der durch das Cookie erzeugten und auf Ihre Nutzung der Website bezogenen Daten (inkl. Ihrer IP-Adresse) an Google sowie die Verarbeitung dieser Daten durch Google verhindern, indem sie das unter dem folgenden Link (http://tools.google.com/dlpage/gaoptout?hl=de) verfügbare Browser-Plugin herunterladen und installieren.</p>
+<p>Connectify benutzt <b>KEIN</b> Google Analytics.</p>
 
 <h3>7. Löschung oder Sperrung der Daten</h3>
 
-<p>Sie können Ihr Nutzerkonto jederzeit löschen. Dies hat zur Folge, dass wir Ihre personenbezogenen Daten unverzüglich löschen. Sofern gesetzliche Aufbewahrungspflichten bestehen, werden die entsprechenden Datensätze für eine weitere Verwendung gesperrt.</p>
+<p>Du kannst dein Nutzerkonto jederzeit löschen. Dies hat zur Folge, dass wir deine Daten unverzüglich löschen.</p>
 
-<h3>8. Verwendung von Social-Plugins (Facebook, Google+ und Twitter)</h3>
+<h3>8. Verwendung von Social-Plugins (Facebook)</h3>
 
-<p>Unser Internetauftritt verwendet Social-Plugins (Plugins) von Facebook, Google+ und Twitter. Die Plugins von Facebook sind an den Facebook-Logos erkennbar (weißes „f“ auf blauer Kachel oder ein „Daumen-hoch“-Zeichen). Der Plugin von Google ist an dem Zeichen "+1" auf weißem oder farbigen Hintergrund erkennbar, der Plugin von Twitter ist an der Aufschrift „Tweet“ erkennbar.</p>
-
-<p>Über diese Plug-ins werden unter Umständen Informationen, zu denen auch personenbezogene Daten gehören können, an die Dienstebetreiber gesendet und ggf. von diesen genutzt. Connectify verhindert die unbewusste und ungewollte Erfassung und Übertragung von Daten an die Diensteanbieter durch eine „2-Klick-Lösung“. Um ein gewünschtes Plugin zu aktivieren, muss dieses erst durch Klick auf den entsprechenden Button aktiviert werden. Erst durch diese Aktivierung des Plugins wird auch die Erfassung von Informationen und deren Übertragung an den Diensteanbieter ausgelöst. Connectify erfasst selbst keine personenbezogenen Daten mittels der Social Plugins oder über deren Nutzung.</p>
+<p>Unser Internetauftritt verwendet Social-Plugins (Plugins) von Facebook. Die Plugins von Facebook sind an den Facebook-Logos erkennbar.</p>
 
 <p>Connectify hat keinen Einfluss darauf, welche Daten ein aktiviertes Plugin erfasst und wie diese durch den Anbieter verwendet werden. Derzeit muss davon ausgegangen werden, dass mindestens die IP-Adresse und gerätebezogene Informationen erfasst und genutzt werden. Ebenfalls besteht die Möglichkeit, dass die Diensteanbieter versuchen, Cookies auf dem verwendeten Rechner zu speichern.</p>
 
-<p>Der Facebook Button baut eine direkte Verbindung zu den Diensten von Facebook Inc., 1601 S. California Ave, Palo Alto, CA 94304, USA auf. Facebook wird dadurch über den Besuch einer bestimmten Seite informiert. Falls Sie zeitgleich bei Facebook angemeldet sind, kann Facebook Sie als Besucher einer bestimmten Seite identifizieren. Welche Daten hierbei im Übrigen erfasst und wie diese genutzt werden, entnehmen Sie bitte den Datenschutzhinweisen von Facebook: https://www.facebook.com/help/?faq=186325668085084. Möglichkeiten zum Schutz Ihrer Privatsphäre innerhalb von Facebook finden Sie unter: http://www.facebook.com/policy.php</p>
-
-<p>Das Social Plugin von Google+ baut eine direkte Verbindung zu den Diensten von Google Inc., 1600 Amphitheatre Parkway, Mountain View, CA 94043, USA auf. Google wird dadurch über den Besuch einer bestimmten Webseite informiert. Sind Sie zeitgleich bei Google angemeldet, kann Google Sie als Besucher der betroffenen Seiten identifizieren. Welche Daten hierbei erfasst und wie diese genutzt werden, entnehmen Sie bitte den Datenschutzhinweisen von Google: https://www.google.com/intl/de/policies/privacy/. Einstellungsmöglichkeiten zum Schutz Ihrer Privatsphäre finden Sie unter: https://www.google.com/dashboard/?hl=de</p>
-
-<p>Das Social Plugin von Twitter baut eine direkte Verbindung zu den Diensten von Twitter Inc., 795 Folsom St., Suite 600, San Francisco, CA 94107, USA auf. Twitter wird dadurch über den Besuch einer bestimmten Webseite informiert. Welche Daten erfasst und wie diese genutzt werden, entnehmen Sie bitte den Datenschutzhinweisen von Twitter: https://twitter.com/privacy. Möglichkeiten zum Schutz Ihrer Privatsphäre finden Sie unter: https://twitter.com/settings/account</p>
-
-<p>Sollten Sie die Datenübertragung zu Facebook, Google+ oder Twitter vermeiden wollen, empfehlen wir, den Button zur Aktivierung der Plugins nicht anzuklicken – oder nur dann, wenn Sie nicht bei dem jeweiligen Betreiber angemeldet sind bzw. eine Empfehlung senden wollen.</p>
+<p>Der Facebook Button baut eine direkte Verbindung zu den Diensten von Facebook Inc., 1601 S. California Ave, Palo Alto, CA 94304, USA auf. Facebook wird dadurch über den Besuch einer bestimmten Seite informiert. Falls du zeitgleich bei Facebook angemeldet bist, kann Facebook dich als Besucher einer bestimmten Seite identifizieren. Welche Daten hierbei im Übrigen erfasst und wie diese genutzt werden, entnimmst du bitte den Datenschutzhinweisen von Facebook: https://www.facebook.com/help/?faq=186325668085084. Möglichkeiten zum Schutz deiner Privatsphäre innerhalb von Facebook findest du unter: http://www.facebook.com/policy.php</p>
 
 <h3>9. Änderung der Datenschutzerklärung</h3>
 
-<p>Connectify behält sich vor, diese Datenschutzhinweise zu aktualisieren. Aus diesem Grund ist es sinnvoll, dass Sie als Nutzer in gewissen Abständen den aktuellen Stand dieser Datenschutzerklärung abfragen. Sollte eine Änderung der Datenschutzerklärung dazu führen, dass sich der Inhalt der von Ihnen diesbezüglich abgegebenen Einwilligung zum Umgang mit Ihren personenbezogenen Daten ändert, wird Connectify eine neue Einwilligungserklärung bei Ihnen einholen.</p>
+<p>Connectify behält sich vor, diese Datenschutzhinweise zu aktualisieren. Aus diesem Grund ist es sinnvoll, dass du als Nutzer in gewissen Abständen den aktuellen Stand dieser Datenschutzerklärung abfragst. Sollte eine Änderung der Datenschutzerklärung dazu führen, dass sich der Inhalt der von dir diesbezüglich abgegebenen Einwilligung zum Umgang mit deinen personenbezogenen Daten ändert, wird Connectify eine neue Einwilligungserklärung bei dir einholen. Eine kommerzielle Vermarktung deiner Daten bleibt allerdings ausdrücklich ausgeschlossen.</p>
 </div>
