--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -106,6 +106,13 @@ line-height: 2.7em;
 	z-index: 99;
 }
 
+#login {
+	position: absolute;
+	left: 360px;
+	top: 326px;
+	z-index: 98;
+}
+
 #tourclose {
 	position: absolute;
 	left: 5px;
@@ -129,13 +136,13 @@ line-height: 2.7em;
 }
 
 .buttonbox {
-padding-top: 15px;
+padding-top: 195px;
 	
 }
 
 #whatfbknows {
 	margin-top: 32px;
-	border-color: #D4F0D4;
+	border-color: #D4F0D4; 
 	background: #EBF3EC;
 }
 
@@ -541,6 +548,10 @@ div:focus {
 		h4{
 			line-height: 2.0em;
 		}
+}
+
+#whatearns, #reallyforfree {
+	display: none;
 }
 
 
