--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -316,17 +316,18 @@ document.forms['new_micropost'].elements['micropost[latlng]'].value = '(50.29792
       <%= submit_tag t('home.micropost.searchwithoutreg'), :name => nil, class: "btn"%>
       <% end %>
   </div>
-  <%= image_tag "connectifybanner.jpg", width: "100%" %>
+  
   <div class='buttonbox'>
-  <span><%= image_tag "facebook2.png", title: "Connect with Facebook", width: "31px" %>
-<%= link_to t('home.connectme'), "/auth/facebook", id: "sign_in", class: "btn btn-primary btn-success" %></span> <%= t('home.or') %>
-<%= link_to t('home.tourstart'), "#", id: "tourstart", class: "btn btn-primary btn-warning" %>
+  <span class="lead"><%= image_tag "facebook2.png", title: "Connect with Facebook", width: "31px" %>
+<%= link_to t('home.connectme'), "/auth/facebook", id: "sign_in", class: "btn btn-large btn-success" %> <%= t('home.or') %>
+<%= link_to t('home.tourstart'), "#", id: "tourstart", class: "btn btn-large btn-warning" %></span>
 </div>
 <div id="tourdiv"><div id='tourwrapper'>
   <%= link_to "x", "#", id: "tourclose" %>
   <div id="tourpic" style="position: relative;"><%= image_tag "Tour1.png" %></div>
   <%= link_to t('home.next'), "#", id: "tournext", class: "btn" %>
-  <%= link_to t('home.back'), "#", id: "tourback", class: "btn" %></div>
+  <%= link_to t('home.back'), "#", id: "tourback", class: "btn" %>
+  <%= link_to t('home.connectme'), "/auth/facebook", id: "login", class: "btn btn-large btn-success" %></div>
 </div>
 </div>
 <div class="span7">
@@ -343,24 +344,35 @@ document.forms['new_micropost'].elements['micropost[latlng]'].value = '(50.29792
   <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
 </div>
 </div>
-<div>
-  <a href="#" id="show_whatfbknows" style="clear: both; padding-left: 0px; position: relative; top: 20px; z-index: 1;"><%= t('doesfbknow') %></a>
+<div class="span12">
+  <p class="lead">Probiere es aus. Es ist absolut <b>kostenlos</b>!</p>
 </div>
-
-</div>
-<div id="whatfbknows" style="margin-top: 32px; border-color: #D4F0D4; background: #EBF3EC;"><h4>Lieber Nutzer,</h4>es ist ein gutes Zeichen, dass du dir um deine Privatsphäre sorgen machst und deshalb auf diesen Link geklickt hast. Gerade in Zeiten, in denen Unternehmen die persönlichen Rechte der Menschen stark einschränken um Profite zu machen, ist es wichtig sich Gedanken zu machen, wem wir unsere Daten anvertrauen. Connectify ist ein Projekt (Masterarbeit) aber eigentlich vielmehr ein Hobby, dass aus dem Wunsch heraus geboren wurde, diesen Service eines Tages selbst nutzen zu können. Das selbsterklärte Ziel ist es Menschen miteinander zu verbinden: einfach, schnell und sicher. Aus diesem Grund habe ich mich bewusst dafür entschieden, Connectify mit Facebook zu verknüpfen. Facebook ist leider auch dafür bekannt, die Daten seiner User zu sammeln und damit zu arbeiten und daher sind die folgenden Sätze als eine Art Grundmanifest zu verstehen, welche meine persönliche Überzeugung widerspiegeln.<br><br>Sobald du Connectify nutzt, kann Facebook nur feststellen, dass du diese Seite besucht hast. <b>Sonst nichts.</b><br> Es werden keine persönlichen Daten an Facebook übertragen.<br> Ich versuche deine Privatssphäre soweit es geht zu schützen, indem nur die nötigsten Informationen von Facebook angefordert werden. Dazu zählen deine eMail, dein Name und dein aktuelles Profilbild. <br><h4>Danke für dein Vertrauen!</h4>
+<div class="span7 offset5" style="text-align: right; float: right;">
+  <p class="lead">Halt! Ich habe noch ein paar Fragen:</p>
+  <a href="#" id="show_reallyforfree">Ist Connectify wirklich kostenlos?</a><br>
+  <div id="reallyforfree" class="" style="margin-bottom: 32px; width: 95%; text-align: left; float: right;">Ja. Es gibt keine versteckten Kosten.</div>
+  <a href="#" id="show_whatfbknows"><%= t('doesfbknow') %></a><br>
+  <div id="whatfbknows" class="" style="margin-top: 32px; margin-bottom: 32px; border-color: #D4F0D4; background: #EBF3EC; width: 95%; text-align: left; float: right;"><h4>Lieber Nutzer,</h4>es ist ein gutes Zeichen, dass du dir um deine Privatsphäre sorgen machst und deshalb auf diesen Link geklickt hast. Gerade in Zeiten, in denen Unternehmen die persönlichen Rechte der Menschen stark einschränken um Profite zu machen, ist es wichtig sich Gedanken zu machen, wem wir unsere Daten anvertrauen. Connectify ist ein Projekt (Masterarbeit) aber eigentlich vielmehr ein Hobby, dass aus dem Wunsch heraus geboren wurde, diesen Service eines Tages selbst nutzen zu können. Das selbsterklärte Ziel ist es Menschen miteinander zu verbinden: einfach, schnell und sicher. Aus diesem Grund habe ich mich bewusst dafür entschieden, Connectify mit Facebook zu verknüpfen. Facebook ist leider auch dafür bekannt, die Daten seiner User zu sammeln und damit zu arbeiten und daher sind die folgenden Sätze als eine Art Grundmanifest zu verstehen, welche meine persönliche Überzeugung widerspiegeln.<br><br><b>Sobald du Connectify nutzt, kann Facebook nur feststellen, dass du diese Seite besucht hast. Sonst nichts.</b><br> Es werden keine persönlichen Daten, die du hier auf Connectify erstellst, an Facebook übertragen.<br> Ich versuche deine Privatssphäre soweit es geht zu schützen, indem nur die nötigsten Informationen von Facebook angefordert werden. Dazu zählen deine eMail, dein Name und dein aktuelles Profilbild. <br><h4>Danke für dein Vertrauen!</h4>
 <!-- <br>Allerdings hast du von einem Login mit Facebook folgende Vorteile:<br>
 <ul>
   <li>Melde dich superschnell an</li>
   <li>Es stellt sicher, dass Connectify-Nutzer ihre wirkliche Identität verweden</li>
   <li>Connectify-Nutzer können direkt in Facebook angeschrieben werden</li>
   </ul> --> </div>
-<div id="usertimeline">
-  <div style="size: 1.1em;"><%= t('home.newmembers') %></div>
+  <a href="#" id="show_whatearns">Wie verdient Connectify Geld?</a><br>
+  <div id="whatearns" style="margin-bottom: 32px; width: 95%; text-align: left; float: right;">kostenlos + werbefrei = ___ EUR<br>
+    Connectify ist mein Hobby bzw. sogar ein Teil meiner Masterarbeit. Ich freue mich viel mehr, wenn es ein paar Besucher gibt, die meine Arbeit schätzen oder denen sie sogar hilft. Es gibt ein paar Ideen, über die ich auch in meiner Arbeit schreibe, um später einmal zumindest einen Teil der Serverkosten zahlen zu können. Diese bewegen sich eher im Freemium Bereich und werden vor einer Einführung zuerst einmal der Community vorgestellt und diskutiert. Connectify wird aber immer kostenlos und deine persönlichen Daten privat bleiben. </div>
+  </div>
+<div class="span12 lead">
+  <div><%= t('home.newmembers') %></div>
 <% @users.each do |user| %>
   <%= link_to gravatar_for(user, size: 80), user, class: "img-polaroid" %>
 <% end %>
 </div>
+<div class="span12">
+  <%= image_tag "connectifybanner.jpg" %>
+</div>
+</div><!-- fluid-close -->
 
 <script>
 $(document).ready(function() {
@@ -370,11 +382,21 @@ $(document).ready(function() {
 
   $('#show_whatfbknows').click( function(event) {
       event.preventDefault();
-      $('#whatfbknows').fadeIn();
-  })
+      $('#whatfbknows').toggle();
+  });
+   $('#show_whatearns').click( function(event) {
+      event.preventDefault();
+      $('#whatearns').toggle();
+  });
+    $('#show_reallyforfree').click( function(event) {
+      event.preventDefault();
+      $('#reallyforfree').toggle();
+  });
 
+  //Tour START
   $('#tourdiv').hide();
   $('#tourback').hide();
+  $('#login').hide();
 
   $('#tourstart').click( function(event) {
       event.preventDefault();
@@ -388,6 +410,7 @@ $(document).ready(function() {
     var k = i;
     if (i == 8) {
         $('#tournext').fadeOut();
+        $('#login').fadeIn();
         j = 6;
       }
     i = i+1;
@@ -416,6 +439,7 @@ $(document).ready(function() {
       i = i-1;
       if (i == 8) {
         $('#tournext').fadeIn();
+        $('#login').fadeOut();
       }
     $('#tourpic').hide().html( function(){
       var image = '<img src="/assets/Tour'+k+'.png" />';
