--- a/app/views/static_pages/write.mobile.erb
+++ b/app/views/static_pages/write.mobile.erb
@@ -88,6 +88,7 @@ document.getElementById('micropost_place').addEventListener("change",
                     //document.getElementById('address').innerHTML = address;
                     //document.getElementById('testland').innerHTML = country[country.length-1];
                     document.getElementById('micropost_country').value = country[country.length-1];
+                    //alert(document.getElementById('micropost_country').value); //TEST OB COUNTRY GESETZT WIRD.
                     //refresh value  because of JQUERY MOBILE       
 					$('#select').selectmenu('refresh');
 					//refresh and force rebuild because of JQUERY MOBILE
@@ -215,7 +216,32 @@ document.getElementById('micropost_place').addEventListener("change",
     }); 
   }
 
-initialize();
+//Start Geolocation
+//initialize();
+window.onload = initialize();
+
+function validateform(){
+
+  if (document.getElementById('combobox').value == '' || document.getElementById('combobox').value == null){
+    alert('Hobby muss ausgefüllt sein!');
+    document.getElementById('combobox').focus();
+    return false;
+  }
+
+  if (document.getElementById('micropost_place').value == '' || document.getElementById('micropost_place').value == null){
+    alert('Ort muss ausgefüllt sein!');
+    document.getElementById('micropost_place').focus();
+    return false;
+  }
+
+  if (document.getElementById('micropost_country').value == '' || document.getElementById('micropost_country').value){
+    alert('Country muss ausgefüllt sein! Klicke bitte auf die Google Maps - Karte!');
+    return true;
+  }
+
+  return true;
+}
+
 </script>
 <% else %>
 
